external-crates/move/crates/move-compiler/tests/move_2024/typing/index_invalid_crash.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04007]: incompatible types
   ┌─ tests/move_2024/typing/index_invalid_crash.move:13:5
   │
12 │ public fun index_by_reference(table: &mut Table<u64, vector<u64>>) {
   │                                                 --- Expected: 'u64'
13 │     table[&1u64].push_back(3u64);
   │     ^^^^^^^^^^^^
   │     │     │
   │     │     Given: '&u64'
   │     Invalid call of 'a::m::borrow'. Invalid argument for parameter '_k'
